Fixed navigation and aligned header picture

--- a/css/main.css
+++ b/css/main.css
@@ -21,8 +21,9 @@ header {
 }
 
 .head {
-  padding: 1rem;
   display: block;
+  width: 80%;
+  padding-left: 3.2rem;
 }
 
 h1 {
@@ -194,14 +195,20 @@ footer {
     line-height: 1.3;
   }
 
+  h1 {
+    margin-bottom: 0;
+  }
+
   .head {
     margin-top: .5rem;
     float: left;
     width: 50%;
+    padding-bottom: 1.1rem;
   }
 
   li {
     margin: .1rem;
+    padding: .001rem;
   }
 
 }
@@ -216,6 +223,7 @@ footer {
   .head {
     float: none;
     margin-left: 9rem;
+    padding-left: 0;
   }
 
 }
